--- a/style.css
+++ b/style.css
@@ -18,115 +18,90 @@ a{
     text-decoration: none;
     color: black;
 }
-.rectangle1Desk{
+.background{
     position: absolute;
+    z-index: 1;
+}
+.backgroundDesktop{
+  margin-left: auto; top: 0%; margin-right: auto;
+}
+.backgroundMobile{
+    top: 0%;
+    left: 0%;
+}
+.background_rectangle1_Desk{
     top: 0px;
     left: 0px;
     width: 293.97px;
     height: 274px;
-    z-index: 1;
 }
-.rectangle2Desk{
-    position: absolute;
+.background_rectangle2_Desk{
     top: 181px;
     left: 605.51px;
-    z-index: 1;
 }
-.rectangle7Desk{
-    position: absolute;
+.background_rectangle7_Desk{
     top: 420px;
     left: 9.28px;
-    z-index: 1;
 }
 .rectangle8Desk{
-    position: absolute;
     top: 0px;
     left: 565.47px;
-    z-index: 1;
 }
 .rectangle9Desk{
-    position: absolute;
     top: 59px;
     left: 1146.57px;
-    z-index: 1;
 }
 .rectangle11Desk{
-    position: absolute;
     top: 675px;
     left: 998.12px;
-    z-index: 1;
 }
 .rectangle14Desk{
-    position: absolute;
     top: 864.33px;
     left: 99.81px;
-    z-index: 1;
 }
 .rectangle15Desk{
-    position: absolute;
     top: 1305px;
     left: 997.61px;
-    z-index: 1;
 }
 .rectangle16Desk{
-    position: absolute;
     top: 2896px;
     left: 110.01px;
-    z-index: 1;
 }
 .rectangle17Desk{
-    position: absolute;
     top: 3685px;
     left: 149.29px;
-    z-index: 1;
 }
 .rectangle18Desk{
-    position: absolute;
     top: 3117px;
     left: 622.12px;
-    z-index: 1;
 }
 .rectangle19Desk{
-    position: absolute;
     top: 4481px;
     left: 1101.84px;
-    z-index: 1;
 }
 .rectangle192Desk{
-    position: absolute;
     top: 4711px;
     left: 0px;
-    z-index: 1;
 }
 .vector8Desk{
-    position: absolute;
     top: 636.5px;
     left: 77.3px;
-    z-index: 1;
 }
 .vector9Desk{
-    position: absolute;
     top: 1034.5px;
     left: 250.02px;
-    z-index: 1;
 }
 .vector10Desk{
-    position: absolute;
     top: 1508px;
     left: 401.89px;
-    z-index: 1;
 }
 .vector11Desk{
-    position: absolute;
     top: 3095.5px;
     left: 153.99px;
-    z-index: 1;
 }
 .vector12Desk{
-    position: absolute;
     top: 3805.5px;
     left: 373.56px;
-    z-index: 1;
 }
 .substractDesk{
     position: absolute;
@@ -134,14 +109,13 @@ a{
 }
 .header{
     position: relative;
-    left: 661px;
+    left: 671px;
     width: 633px;
     margin-top: 30px;
     font-family: "PT Sans Narrow";
     font-size: 20px;
     line-height: 25.88px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     z-index: 3;
 }
@@ -186,26 +160,23 @@ a{
     font-style: normal;
     margin: 0px;
 }
-.portfolio{
+.button{
     position: absolute;
-    top: -7px;
-    left: 240px;
+    top:-7px;
     font-family: "Mplus 1p";
     font-weight: 400;
     font-style: normal;
     size: 16px;
     z-index: 3;
 }
-.order{
-    position: absolute;
+.button_portfolio_text{
+    top:-7px;
+    left: 240px;
+}
+.button_order_text{
     top: -7px;
     left: 20px;
-    font-family: "Mplus 1p";
-    font-weight: 400;
-    font-style: normal;
-    size: 16px;
     color:white;
-    z-index: 3;
 }
 .orderButtons{
     position: relative;
@@ -226,13 +197,16 @@ a{
     margin-top: 60px;
     margin-left: 70px;
 }
-.aboutUsText{
+.cloud{
     position: relative;
     z-index: 3;
-    padding-top:100px;
     font-family: "PT Sans Narrow";
     font-style: normal;
     font-weight: 400;
+    font-size: 48px;
+}
+.cloud_about_us_text{
+    padding-top:100px;
 }
 .aboutUsPictures{
     position: relative;
@@ -264,13 +238,7 @@ a{
     margin-top: 10px;
     margin-bottom: 0px;
 }
-.servicesText{
-    position: relative;
-    z-index: 3;
-    font-family: "PT Sans Narrow";
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 400;
+.cloud_services_text{
     line-height: 62px;
 }
 .greenmark{
@@ -372,14 +340,8 @@ a{
     size: 16px;
     z-index: 3;
 }
-.ourTeam{
-    position: relative;
-    font-family: "PT Sans Narrow";
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 400;
+.cloud_our_team_text{
     line-height: 62px;
-    z-index: 3;
 }
 .ourTeamProfile{
     position: relative;
@@ -412,14 +374,8 @@ a{
     line-height: 36.23px;
     margin-top: 10px;
 }
-.portfolio1{
-    position: relative;
-    font-family: "PT Sans Narrow";
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 62px;  
-    z-index: 3;  
+.cloud_portfolio_text{
+    line-height: 62px;   
 }
 .logoPortfolio{
     position: relative;
@@ -466,13 +422,7 @@ a{
     flex-direction: row;
     margin-top: 10px;
 }
-.contactsCloud{
-    position: relative;
-    z-index: 3;
-    font-family: "PT Sans Narrow";
-    font-size: 42px;
-    font-style: normal;
-    font-weight: 400;
+.cloud_contacts_text{
     line-height: 54px;
 }
 .footesLinks{
@@ -521,7 +471,6 @@ a{
     width: 186.09px;
     left: 18px;
     top: 572.86px;
-    border-radius: 900px;
     z-index: 1;
 }
 .vector14Mobile{
@@ -560,7 +509,7 @@ a{
 .rectangle201Mobile{
     position: absolute;
     top:4959px;
-    left:-10px;
+    left:0px;
 }
 .rectangle19Mobile{
     position: absolute;
@@ -569,10 +518,7 @@ a{
 }
 .rectangle1Mobile{
     position: absolute;
-    /* width: 385px; */
     height: 389,47px;
-    /* left: 211.53px; */
-    /* top:  -273.32px; */
     top: 0;
     left: 0;
     z-index: 1;
@@ -612,7 +558,7 @@ a{
         width: 129px;
         height: 129px;
     }
-    .servicesText{  /* Блок делать надо, вместе с облачком */
+    .cloud_services_text{ 
         font-size: 36px;
         line-height: 46.58px;
         padding-left: 223px;
@@ -650,7 +596,7 @@ a{
         font-size: 16px;
         line-height: 20.7px;
     }
-    .ourTeam{   
+    .cloud_our_team_text{   
         font-size: 36px;
         line-height: 46.58px;
         margin-top: 120px;
@@ -661,7 +607,7 @@ a{
         font-size: 24px;
         line-height: 31.06px;
     }
-    .portfolio1{ 
+    .cloud_portfolio_text{ 
         font-size: 36px;
         line-height: 46.58px;
         margin-top: 110px;
@@ -686,13 +632,12 @@ a{
         font-size: 24px;
         line-height: 31.06px;
     }
-    .contactsCloud{ 
+    .cloud_contacts_text{ 
         font-size: 36px;
         line-height: 46.58px;
     }
     .footesLinks{
         flex-direction: column;
-        margin-left: -30px;
         margin-top: 100px;
         text-align: center;
     }
@@ -708,7 +653,7 @@ a{
     }
     .ourTeamProfile{
         flex-direction: column;
-        width: 414px;
+        width: 404px;
         height: 440px;
         margin-top: 150px;
         margin-left: 0px;
@@ -758,9 +703,10 @@ a{
         margin-top:5px;
         margin-left: 100px;
     }
-    .aboutUsText{
+    .cloud_about_us_text{
         font-size: 36px;
         line-height: 46.58px;
+        padding-left: 70px;
     }
     .titleText{
         margin-left:20px;
@@ -798,7 +744,8 @@ a{
         margin-top: 30px;
         margin-left: 20px ;
     }
-    .contactsCloud{
+    .cloud_contacts_text{
+        font-size: 36px;
         margin-top: 90px;
         margin-left: 210px;
     }
@@ -813,6 +760,7 @@ a{
 @media (min-width: 415px) {
     html{
         width: 1440px;
+        margin-left: auto; margin-right: auto;
     }
     .backgroundDesktop,.group60,.group61,.rectangle29Desk,.copyright{
         display: inherit;
@@ -854,7 +802,7 @@ a{
         width: 203px;
         height: 203px;
     }
-    .servicesText{  
+    .cloud_services_text{  
         font-size: 48px;
         line-height: 62.11px;
         padding-left: 1050px;
@@ -886,7 +834,7 @@ a{
         font-size: 20px;
         line-height: 25.88px;
     }
-    .ourTeam{   
+    .cloud_our_team_text{   
         font-size: 48px;
         line-height: 62.11px;
         margin-top: 100px;
@@ -897,7 +845,7 @@ a{
         font-size: 28px;
         line-height: 36.23px;
     }
-    .portfolio1{ 
+    .cloud_portfolio_text{ 
         font-size: 48px;
         line-height: 62.11px;
         margin-top: 140px;
@@ -922,7 +870,7 @@ a{
         font-size: 28px;
         line-height: 36.23px;
     }
-    .contactsCloud{ 
+    .cloud_contacts_text{ 
         font-size: 48px;
         line-height: 62.11px;
     }
@@ -942,10 +890,8 @@ a{
     }
     .ourTeamProfile{
         flex-direction: row;
-        width: 1100px;
         height: 440px;
         margin-top: 160px;
-        margin-left: 115px;
     }
     .arrowLeft{
         display: inherit;
@@ -954,14 +900,14 @@ a{
         display: inherit;
     }
     .rebrand{
-        margin-left: 150px;
         margin-top: 60px;
         margin-bottom: 20px;
         flex-direction: row-reverse;
         justify-content: space-evenly;
+        align-items: center;
     }
     .creatingSite{
-        margin-left: 100px;
+        align-items: center;
         flex-direction: row;
         justify-content: space-evenly;
     }
@@ -983,20 +929,18 @@ a{
         font-size: 24px;
         line-height: 40px;
     }
-    .aboutUsText{
-        font-size: 48px;
-        line-height: 62.11px;
-    }
     .titleText{
         margin-left:40px;
     }
-    .aboutUsText{
+    .cloud_about_us_text{
+        font-size: 48px;
         padding-left: 150px;
+        line-height: 62.11px;
     }
     .memoBoy19{
         margin-left:60px;
     }
-    .profileText{
+    .cloud_profile_text{
         margin-top: 80px;
     }
     .quote{
@@ -1021,7 +965,7 @@ a{
         margin-top: 30px;
         margin-left: 100px ;
     }
-    .contactsCloud{
+    .cloud_contacts_text{
         margin-left: 1150px;
     }
     .socialLinks{
